--- a/css/grade.css
+++ b/css/grade.css
@@ -3,7 +3,6 @@
     width: 100%;
     margin-right: auto;
     margin-left: auto;
-    max-width: 980px;
 }
 
 /* breackpoints */
