--- a/css/reboot.css
+++ b/css/reboot.css
@@ -22,6 +22,10 @@ body{
     font-size: 1.6rem;
 }
 
+button{
+    font-size: 1.6rem;
+}
+
 a{
     text-decoration: none;
 }
